replace getid() with threadid()